--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@ body {
 }
 
 .nav{
-    letter-spacing: 2px;
-    font-size: 15px;
-    margin-bottom: 50px;
+    width: 100%;
+    letter-spacing: 3px;
+    font-size: min(2vw, 13px);;
+    background-color: black;
+    font-weight: 100;
+    position: fixed;
+    top: 0;
 }
 
 .headings{
@@ -25,6 +29,7 @@ body {
 .aboutme{
     font-weight: 100;
     letter-spacing: 1px;
+    margin-top: 100px;
 }
 
 .portfolio{
@@ -33,7 +38,7 @@ body {
 
 .contact{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
     font-weight: 100;
     letter-spacing: 1px;
     line-height: 40px;
