--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 .nav{
+    z-index:2;
     width: 100%;
     letter-spacing: 3px;
     font-size: min(2vw, 13px);;
@@ -30,6 +31,11 @@ body {
     font-weight: 100;
     letter-spacing: 1px;
     margin-top: 100px;
+    font-size: min(3.5vw, 15px) ;
+}
+
+.blogs{
+    letter-spacing: 1px;
 }
 
 .portfolio{
@@ -38,12 +44,13 @@ body {
 
 .contact{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 120px;
     font-weight: 100;
     letter-spacing: 1px;
     line-height: 40px;
 }
 
+/* Advance CSS */
 a:hover, a:visited, a:link, a:active{
     text-decoration: none;
     color: black;
@@ -57,7 +64,6 @@ a:hover, a:visited, a:link, a:active{
 
 .card{
     border-radius: 4px;
-    background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
     padding: 5px;
