--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-color: rgba(255, 255, 255, 0.9);
     position: fixed;
     top: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .abouttext{
@@ -18,6 +19,7 @@ body{
     margin-top: 40px; 
     line-height: 25px;
     font-style: italic;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .headings{
@@ -53,6 +55,7 @@ body{
 }
 
 .contact{
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin-top: 70px;
     letter-spacing: 1px;
@@ -84,6 +87,7 @@ a:hover, a:visited, a:link, a:active{
 }
 
 .card{
+    font-family: 'Montserrat', sans-serif;
     border-radius: 4px;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
